@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,7 +24,6 @@ import org.eclipse.jface.text.IFindReplaceTarget;
 import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.ISelectionProvider;
 import org.eclipse.jface.viewers.IStructuredSelection;
-import org.eclipse.jface.viewers.Viewer;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.dnd.Clipboard;
@@ -53,13 +52,9 @@ import org.jkiss.dbeaver.model.data.hints.DBDAttributeHintProvider;
 import org.jkiss.dbeaver.model.data.hints.DBDCellHintProvider;
 import org.jkiss.dbeaver.model.data.hints.DBDValueHint;
 import org.jkiss.dbeaver.model.data.hints.DBDValueHintProvider;
-import org.jkiss.dbeaver.model.exec.DBCAttributeMetaData;
-import org.jkiss.dbeaver.model.exec.DBCEntityMetaData;
-import org.jkiss.dbeaver.model.exec.DBCException;
-import org.jkiss.dbeaver.model.exec.DBCExecutionContext;
-import org.jkiss.dbeaver.model.exec.DBCSession;
-import org.jkiss.dbeaver.model.exec.DBExecUtils;
+import org.jkiss.dbeaver.model.exec.*;
 import org.jkiss.dbeaver.model.impl.data.DBDValueError;
+import org.jkiss.dbeaver.model.impl.data.ResultSetHintContext;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
 import org.jkiss.dbeaver.model.runtime.VoidProgressMonitor;
 import org.jkiss.dbeaver.model.sql.SQLConstants;
@@ -493,7 +488,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
     @NotNull
     @Override
-    public Map<Transfer, Object> copySelection(ResultSetCopySettings settings) {
+    public Map<Transfer, Object> copySelection(@NotNull ResultSetCopySettings settings) {
         boolean copyHTML = settings.isCopyHTML();
 
         StringBuilder tdt = new StringBuilder();
@@ -671,7 +666,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 final GridPos rangeEnd = targetRange.getSecond();
                 int rowNum = rangeStart.row;
                 //boolean overNewRow = controller.getModel().getRow(rowNum).getState() == ResultSetRow.STATE_ADDED;
-                try (DBCSession session = DBUtils.openUtilSession(new VoidProgressMonitor(), controller.getDataContainer(), "Advanced paste")) {
+                DBSDataContainer dataContainer = controller.getDataContainer();
+                assert dataContainer != null;
+                try (DBCSession session = DBUtils.openUtilSession(new VoidProgressMonitor(), dataContainer, "Advanced paste")) {
 
                     String[][] newLines = parseGridLines(strValue, settings.isInsertMultipleRows(), settings.isIgnoreQuotes());
 
@@ -811,9 +808,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
     private Pair<GridPos, GridPos> getContinuousRange(@NotNull List<GridPos> selection) {
         return switch (selection.size()) {
             case 0 -> null;
-            case 1 -> new Pair<>(selection.get(0), null);
+            case 1 -> new Pair<>(selection.getFirst(), null);
             default -> {
-                GridPos min = selection.get(0);
+                GridPos min = selection.getFirst();
                 GridPos max = new GridPos(min);
 
                 for (int i = 0; i < selection.size(); i++) {
@@ -906,6 +903,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return lines.toArray(new String[lines.size()][]);
     }
 
+    @Nullable
     @Override
     public Control getControl() {
         return spreadsheet;
@@ -1094,10 +1092,10 @@ public class SpreadsheetPresentation extends AbstractPresentation
                     if (allUnpinned != allPinned) {
                         final String pinnedTitle = allUnpinned
                             ? selectedColumns.size() == 1
-                            ? NLS.bind(ResultSetMessages.controls_resultset_viewer_pin_column, ((DBDAttributeBinding) selectedColumns.get(0).getElement()).getName())
+                            ? NLS.bind(ResultSetMessages.controls_resultset_viewer_pin_column, ((DBDAttributeBinding) selectedColumns.getFirst().getElement()).getName())
                             : NLS.bind(ResultSetMessages.controls_resultset_viewer_pin_columns, selectedColumns.size())
                             : selectedColumns.size() == 1
-                            ? NLS.bind(ResultSetMessages.controls_resultset_viewer_unpin_column, ((DBDAttributeBinding) selectedColumns.get(0).getElement()).getName())
+                            ? NLS.bind(ResultSetMessages.controls_resultset_viewer_unpin_column, ((DBDAttributeBinding) selectedColumns.getFirst().getElement()).getName())
                             : NLS.bind(ResultSetMessages.controls_resultset_viewer_unpin_columns, selectedColumns.size());
 
                         manager.insertBefore(IResultSetController.MENU_GROUP_ADDITIONS, new Action(pinnedTitle) {
@@ -1135,7 +1133,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
                     String hideTitle;
                     if (selectedColumns.size() == 1) {
-                        DBDAttributeBinding columnToHide = (DBDAttributeBinding) selectedColumns.get(0).getElement();
+                        DBDAttributeBinding columnToHide = (DBDAttributeBinding) selectedColumns.getFirst().getElement();
                         hideTitle = NLS.bind(ResultSetMessages.controls_resultset_viewer_hide_column_x, columnToHide.getName());
                     } else {
                         hideTitle = NLS.bind(ResultSetMessages.controls_resultset_viewer_hide_columns_x, selectedColumns.size());
@@ -1393,6 +1391,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
     public void navigateLink(@NotNull GridCell cell, int x, int y, int state) {
         final DBDAttributeBinding attr = getAttributeFromGrid(cell.col, cell.row);
         final ResultSetRow row = getResultRowFromGrid(cell.col, cell.row);
+        if (attr == null || row == null) {
+            return;
+        }
 
         Object value = controller.getModel().getCellValue(makeResultSetCellLocation(attr, row, cell.row));
         if ((value instanceof Boolean || value instanceof Number || value == null) && isShowAsCheckbox(attr)) {
@@ -1428,9 +1429,12 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
     }
 
-    public void toggleCellValue(IGridColumn columnElement, IGridRow rowElement) {
+    public void toggleCellValue(@NotNull IGridColumn columnElement, @NotNull IGridRow rowElement) {
         final DBDAttributeBinding attr = getAttributeFromGrid(columnElement, rowElement);
         final ResultSetRow row = getResultRowFromGrid(columnElement, rowElement);
+        if (attr == null || row == null) {
+            return;
+        }
         final ResultSetCellLocation cellLocation = makeResultSetCellLocation(attr, row, rowElement);
 
         if (isShowAsCheckbox(attr)) {
@@ -1472,7 +1476,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     // Themes
 
     @Override
-    protected void applyThemeSettings(ITheme currentTheme) {
+    protected void applyThemeSettings(@NotNull ITheme currentTheme) {
         this.spreadsheet.setFont(ResultSetThemeSettings.instance.resultSetFont);
 
         {
@@ -1512,7 +1516,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             dataContainer.isFeatureSupported(DBSDataContainer.FEATURE_DATA_FILTER);
     }
 
-    public void changeSorting(Object columnElement, final int state) {
+    public void changeSorting(@Nullable Object columnElement, final int state) {
         if (columnElement == null) {
             columnOrder = columnOrder == SWT.DEFAULT ? SWT.UP : (columnOrder == SWT.UP ? SWT.DOWN : SWT.DEFAULT);
             spreadsheet.refreshData(false, true, false);
@@ -1530,7 +1534,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     ///////////////////////////////////////////////
     // Filtering
 
-    void handleColumnIconClick(Object columnElement) {
+    void handleColumnIconClick(@NotNull Object columnElement) {
         if (!(columnElement instanceof DBDAttributeBinding attributeBinding)) {
             log.debug("Unable to show distinct filter for columnElement" + columnElement);
             return;
@@ -1541,6 +1545,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     ///////////////////////////////////////////////
     // Misc
 
+    @NotNull
     public DBPPreferenceStore getPreferenceStore() {
         return controller.getPreferenceStore();
     }
@@ -1607,6 +1612,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return highlightScopeLastLine;
     }
 
+    @NotNull
     @Override
     public SpreadsheetSelectionImpl getSelection() {
         return new SpreadsheetSelectionImpl();
@@ -1703,7 +1709,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     }
 
     @Override
-    public void moveColumn(Object dragColumn, Object dropColumn, DropLocation location) {
+    public void moveColumn(@NotNull Object dragColumn, @NotNull Object dropColumn, @NotNull DropLocation location) {
         if (dragColumn instanceof DBDAttributeBinding dragBinding && dropColumn instanceof DBDAttributeBinding dropBinding) {
             final DBDDataFilter dataFilter = new DBDDataFilter(controller.getModel().getDataFilter());
             final DBDAttributeConstraint dragC = dataFilter.getConstraint(dragBinding);
@@ -1789,14 +1795,17 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return controller.isRecordMode();
     }
 
+    @NotNull
     public Color getBackgroundDeleted() {
         return ResultSetThemeSettings.instance.backgroundDeleted;
     }
 
+    @NotNull
     public Color getBackgroundModified() {
         return ResultSetThemeSettings.instance.backgroundModified;
     }
 
+    @Nullable
     private DBDAttributeBinding getAttributeFromGrid(IGridColumn colObject, IGridRow rowObject) {
         if (controller.isRecordMode()) {
             if (rowObject == null) {
@@ -1824,7 +1833,8 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
     }
 
-    private ResultSetRow getResultRowFromGrid(IGridColumn colObject, IGridRow rowObject) {
+    @Nullable
+    private ResultSetRow getResultRowFromGrid(@Nullable IGridColumn colObject, @Nullable IGridRow rowObject) {
         if (controller.isRecordMode()) {
             return colObject == null ? null : (ResultSetRow) colObject.getElement();
         } else {
@@ -2177,6 +2187,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return SWT.NONE;
         }
 
+        @NotNull
         @Override
         public ElementState getDefaultState(@NotNull IGridColumn element) {
             if (element.getElement() instanceof DBDAttributeBinding binding) {
@@ -2207,6 +2218,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return ElementState.NONE;
         }
 
+        @NotNull
         @Override
         public IGridStatusColumn[] getStatusColumns() {
             return new IGridStatusColumn[] {
@@ -2287,7 +2299,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public boolean isVoidCell(IGridColumn gridColumn, IGridRow gridRow) {
+        public boolean isVoidCell(@NotNull IGridColumn gridColumn, @NotNull IGridRow gridRow) {
             return getCellValue(gridColumn, gridRow, false) == DBDVoid.INSTANCE;
         }
 
@@ -2352,9 +2364,12 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public void validateDataPresence(IGridColumn gridColumn, IGridRow gridRow) {
+        public void validateDataPresence(@NotNull IGridColumn gridColumn, @NotNull IGridRow gridRow) {
             // Check for next segment read
             ResultSetRow row = getResultRowFromGrid(gridColumn, gridRow);
+            if (row == null) {
+                return;
+            }
             int rowNum = row.getVisualNumber();
             if (rowNum > 0 &&
                 rowNum == controller.getModel().getRowCount() - 1 &&
@@ -2471,17 +2486,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return info;
         }
 
-        @Override
-        public void dispose() {
-        }
-
-        @Override
-        public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
-        }
-
         @Nullable
         @Override
-        public Object getCellValue(IGridColumn gridColumn, IGridRow gridRow, boolean formatString) {
+        public Object getCellValue(@NotNull IGridColumn gridColumn, @NotNull IGridRow gridRow, boolean formatString) {
             final Object value = getCellValue(gridColumn, gridRow, getRowNestedIndexes(gridRow), false);
             if (formatString) {
                 return formatValue(gridColumn, gridRow, value);
@@ -2575,7 +2582,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             }
         }
 
-        public int getCellAlign(@Nullable DBDAttributeBinding attr, ResultSetRow row, Object cellValue) {
+        public int getCellAlign(@Nullable DBDAttributeBinding attr, @Nullable ResultSetRow row, @Nullable Object cellValue) {
             if (!controller.isRecordMode()) {
                 if (attr != null) {
                     if (cellValue instanceof DBDCollection) {
@@ -2671,9 +2678,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         private Color getCellBackground(
-            DBDAttributeBinding attribute,
-            ResultSetRow row,
-            Object cellValue,
+            @NotNull DBDAttributeBinding attribute,
+            @NotNull ResultSetRow row,
+            @Nullable Object cellValue,
             int rowPosition,
             boolean cellSelected,
             boolean ignoreRowSelection)
@@ -2814,7 +2821,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
         @NotNull
         @Override
-        public String getCellLinkText(IGridColumn colElement, IGridRow rowElement) {
+        public String getCellLinkText(@NotNull IGridColumn colElement, @NotNull IGridRow rowElement) {
             DBDAttributeBinding attr = getAttributeFromGrid(colElement, rowElement);
             ResultSetRow row = getResultRowFromGrid(colElement, rowElement);
             Object value = controller.getModel().getCellValue(makeResultSetCellLocation(attr, row, rowElement));
@@ -2834,7 +2841,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public String getCellToolTip(IGridColumn colElement, IGridRow rowElement) {
+        public String getCellToolTip(@NotNull IGridColumn colElement, @NotNull IGridRow rowElement) {
             Object cellValue = getCellValue(colElement, rowElement, false);
             StringBuilder toolTip = new StringBuilder();
 
@@ -2863,8 +2870,14 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return toolTip.toString();
         }
 
+        @Nullable
         @Override
-        public List<IGridHint> getCellHints(IGridColumn colElement, IGridRow rowElement, Object cellValue, int options) {
+        public List<IGridHint> getCellHints(
+            @NotNull IGridColumn colElement,
+            @NotNull IGridRow rowElement,
+            @Nullable Object cellValue,
+            int options
+        ) {
             DBDAttributeBinding attr = getAttributeFromGrid(colElement, rowElement);
             if (attr == null) {
                 return null;
@@ -2901,8 +2914,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return gridHints;
         }
 
+        @Nullable
         @Override
-        public List<IGridHint> getColumnHints(IGridItem element, int options) {
+        public List<IGridHint> getColumnHints(@NotNull IGridItem element, int options) {
             DBDAttributeBinding attr = element instanceof IGridColumn gc ? getAttributeFromGrid(gc, null) : null;
             if (attr == null) {
                 return null;
@@ -2930,7 +2944,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public int getColumnHintsWidth(IGridColumn colElement) {
+        public int getColumnHintsWidth(@NotNull IGridColumn colElement) {
             DBDAttributeBinding attr = colElement.getElement() instanceof DBDAttributeBinding ab ? ab : null;
             if (attr == null) {
                 return 0;
@@ -2952,14 +2966,14 @@ public class SpreadsheetPresentation extends AbstractPresentation
     }
 
     // Simple attribute is attribute which is not a part of FK or PK
-    private boolean isSimpleAttribute(DBDAttributeBinding attr) {
+    private boolean isSimpleAttribute(@NotNull DBDAttributeBinding attr) {
         DBDRowIdentifier rowIdentifier = attr.getRowIdentifier();
         return CommonUtils.isEmpty(attr.getReferrers()) &&
                (rowIdentifier == null || !rowIdentifier.hasAttribute(attr) ||
                 rowIdentifier.getUniqueKey().getConstraintType() != DBSEntityConstraintType.PRIMARY_KEY);
     }
 
-    private static boolean isHyperlinkText(String strValue) {
+    private static boolean isHyperlinkText(@NotNull String strValue) {
         return strValue.startsWith("http://") || strValue.startsWith("https://");
     }
 
@@ -2972,7 +2986,8 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return currentAttribute == null || currentRow == null ? null : makeResultSetCellLocation(currentAttribute, currentRow, focusRow);
     }
 
-    public ResultSetCellLocation getCellLocation(GridCell cell) {
+    @NotNull
+    public ResultSetCellLocation getCellLocation(@NotNull GridCell cell) {
         final boolean recordMode = getController().isRecordMode();
         final DBDAttributeBinding attr = (DBDAttributeBinding)(recordMode ? cell.row.getElement() : cell.col.getElement());
         final ResultSetRow row = (ResultSetRow)(recordMode ? cell.col.getElement() : cell.row.getElement());
@@ -3028,7 +3043,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     }
 
     @Nullable
-    private int[] getRowNestedIndexes(IGridItem gridRow) {
+    private int[] getRowNestedIndexes(@Nullable IGridItem gridRow) {
         int[] nestedIndexes = null;
         if (gridRow != null && gridRow.getParent() != null) {
             nestedIndexes = new int[gridRow.getLevel()];
@@ -3064,7 +3079,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     // Checks whether there is parent row with attribute of type array
     // We need to check this recursively because of multi-dimensional arrays
     // where we may have multiple levels of nested rows for a single array attribute
-    private boolean hasParentArrayRow(IGridItem item) {
+    private boolean hasParentArrayRow(@NotNull IGridItem item) {
         for (IGridItem gr = item.getParent(); gr != null; gr = gr.getParent()) {
             if (gr.getElement() instanceof DBSTypedObject b) {
                 return b.getDataKind() == DBPDataKind.ARRAY;
@@ -3075,25 +3090,27 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return false;
     }
 
-    private DBDDisplayFormat getValueRenderFormat(DBDAttributeBinding attr, Object value) {
+    @NotNull
+    private DBDDisplayFormat getValueRenderFormat(@NotNull DBDAttributeBinding attr, @Nullable Object value) {
         if (value instanceof Number && useNativeNumbersFormat) {
             return DBDDisplayFormat.NATIVE;
         }
         return gridValueFormat;
     }
 
+    @NotNull
     @Override
     public DBDDisplayFormat getDefaultDisplayFormat() {
         return gridValueFormat;
     }
 
     @Override
-    public void setDefaultDisplayFormat(DBDDisplayFormat displayFormat) {
+    public void setDefaultDisplayFormat(@NotNull DBDDisplayFormat displayFormat) {
         this.gridValueFormat = displayFormat;
         getPreferenceStore().setValue(ResultSetPreferences.RESULT_GRID_VALUE_FORMAT, this.gridValueFormat.name());
     }
 
-    private boolean isShowAsCheckbox(DBDAttributeBinding attr) {
+    private boolean isShowAsCheckbox(@NotNull DBDAttributeBinding attr) {
         return showBooleanAsCheckbox && attr.getPresentationAttribute().getDataKind() == DBPDataKind.BOOLEAN;
     }
 
